...
        android:layout_height="0dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="81dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
...
